--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "email": "cully.larson@gmail.com"
   }],
   "require": {
-    "php": ">=5.3.0"
+    "php": ">=5.3.0",
+    "cullylarson/local-commands": "~1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0"
